--- a/src/pages/notice.html
+++ b/src/pages/notice.html
@@ -190,7 +190,7 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h4 mb-0 text-gray-800">관리자 공지</h1>
-                        <a href="notice_new.html" class="d-none d-sm-inline-block btn btn-md btn-outline-danger"><i class="fas fa-plus fa-sm"></i> 공지 등록</a>
+                        <a href="#" data-toggle="modal" data-target="#noticeInputModal" class="d-none d-sm-inline-block btn btn-md btn-outline-danger"><i class="fas fa-plus fa-sm"></i> 공지 등록</a>
                     </div>
 
                     <!-- DataTales -->
@@ -286,6 +286,26 @@
         </div>
         <!-- End of Content Wrapper -->
 
+    </div>
+
+
+    <!-- Logout Modal-->
+    <div class="modal fade" id="noticeInputModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">확인</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+                </div>
+                <div class="modal-body">로그아웃 하시겠습니까?</div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">취소</button>
+                    <a class="btn btn-primary" href="login.html">로그아웃</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="../vendor/jquery.min.js"></script>
