--- a/src/pages/notice_new.html
+++ b/src/pages/notice_new.html
@@ -12,6 +12,8 @@
     <link href="../css/default.css" rel="stylesheet">
     <link href="../vendor/dataTables.bootstrap4.min.css" rel="stylesheet">
     <link rel="stylesheet" href="tj-admin.css">
+
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
 </head>
 
 <body>
@@ -190,49 +192,29 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h4 mb-0 text-gray-800">관리자 공지 등록</h1>
-                        <a href="notice_new.html" class="d-none d-sm-inline-block btn btn-md btn-outline-danger"><i class="fas fa-plus fa-sm"></i> 공지 등록</a>
+                        <a href="notice_new.html" class="d-none d-sm-inline-block btn btn-md btn-outline-danger"><i class="fas fa-check fa-sm"></i> 저장</a>
                     </div>
 
                     <!-- DataTales -->
                     <div class="card mb-4">
                         <div class="card-header py-3 search-form">
-                            <h6 class="font-weight-bold text-primary">검색</h6>
+                            <table class="table table-sm table-bordered">
+                                <tbody>
+                                    <tr>
+                                        <th class="table-secondary">제목</th>
+                                        <td><input type="text" class="form-control form-control-sm" id="" placeholder=""></td>
+                                    </tr>
+                                    <tr>
+                                        <th class="table-secondary">게시여부</th>
+                                        <td><input type="checkbox" class="" id="" placeholder=""></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                         <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered" width="100%" cellspacing="0">
-                                    <thead class="thead-light">
-                                        <tr>
-                                            <th scope="col">번호</th>
-                                            <th scope="col">제목</th>
-                                            <th scope="col">조회수</th>
-                                            <th scope="col">글쓴이</th>
-                                            <th scope="col">작성일</th>
-                                            <th scope="col">게시여부</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td scope="row">2</td>
-                                            <td>토플주니어/프라이머리 임시 전화번호 안내</td>
-                                            <td>2</td>
-                                            <td>jwkim</td>
-                                            <td>2019-06-13 오전 10:09:35</td>
-                                            <td>Y</td>
+                            <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
 
-                                        </tr>
-                                        <tr>
-                                            <td scope="row">1</td>
-                                            <td>토플주니어/프라이머리 임시 전화번호 안내</td>
-                                            <td>2</td>
-                                            <td>jwkim</td>
-                                            <td>2019-06-15 오전 10:09:35</td>
-                                            <td>Y</td>
-                                        </tr>
-
-                                    </tbody>
-                                </table>
-                            </div>
+                            <div id="editor"></div>
                         </div>
                     </div>
                 </div>
@@ -261,6 +243,7 @@
     <script src="../vendor/jquery.dataTables.min.js"></script>
     <script src="../vendor/dataTables.bootstrap4.min.js"></script>
     <script src="../js/datatables.js"></script>
+
 
 </body>
 
